<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Person Profile</string>
    <string name="action_settings">Settings</string>
 	<string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="hello_world">Hello world!</string>
  
    <string name="profile_name_title">Name</string>
    <string name="profile_name_hint">Your name here</string>
    <string name="profile_email_title">Email</string>
	<string name="profile_email_hint">Your email here</string>
	<string name="profile_phone_title">Phone</string>
	<string name="profile_phone_hint">Enter phone here</string>
	<string name="profile_gender_title">Gender</string>

    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
 
    <string name="button_save_title">Save</string>
    <string name="button_cancel_title">Cancel</string>
    <string name="preference_key_profile_gender">gender_key</string>
   
</resources>
